--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -276,3 +276,9 @@
     transform: rotate(0deg);
   }
 }
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
